[MODORDSTOR-381] Add unit tests for service